[package]
name = "ggbasm"
version = "0.2.5"
authors = ["Rukai <rubickent@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Generating Gameboy Assembler"
repository = "https://github.com/rukai/ggbasm"
keywords = ["gameboy", "assembly", "assembler", "asm", "gb"]
categories = ["game-engines"]

[dependencies]
nom = "5"
failure = "0.1"
failure_derive = "0.1"
byteorder = "1"
image = "0.21"
