[package]
name = "ggbasm"
version = "0.3.0"
authors = ["Rukai <rubickent@gmail.com>"]
edition = "2021"
rust-version = "1.56"
license = "MIT"
description = "Generating Gameboy Assembler"
repository = "https://github.com/rukai/ggbasm"
keywords = ["gameboy", "assembly", "assembler", "asm", "gb"]
categories = ["game-engines"]

[dependencies]
nom = "7"
anyhow = "1"
thiserror = "1"
byteorder = "1"
image = "0.23.14"
